 Tom Cato Amundsen).
-Fix crash when converting multiple cards at the same time between e.g.
 Vocabulary card type and Map card type (reported by Gnome).
-Unless the 'Prefill tag behaviour' plugin is active, changing card types will
 never change the tag you already filled in, even if it's different from the
 last used tag (reported by Gnome).
-Fix crash pressing the 'Delete' key in the 'Activate cards' dialog (reported
 by Gnome).
-In case you are not using saved sets and create a new tag whose parent is
 inactive, make the new tag inactive too. (If you have a saved set active,
 you'll get a dialog box asking whether you want to activate that tag or not,
 just like before) (reported by Gnome).
-Fix bug in interaction between Latex system and exporting to the 'cards'
 format (reported by Gwern).
-More tweaks for RTL languages like Arabic and Hebrew (bug report by
 Ansgar Bohmann)
-No more superfluous empty lines for cards with RTL languages.
-On a Thai system, don't use Thai numerals in the card browser if the language
 is set to English (request by Mark).
-Take time zone information into account when displaying creation date of
 card in browser.
-When renaming a saved set, prefill the name field with the previous name of
 the set.
-Don't reset selected plugin when importing a new plugin (reported by Gnome).
-When trying to deactivate a card type in use, show name of the card type in
 the error message.
-Fix CTRL+F shortcut for inserting flash, CTRL+D for inserting video, and
 CTRL+C for copying (reported by Gnome).
-Tab key now cycles through all the grade buttons (reported by Gnome).
-Fix grading shortcuts R and W for 'right' and 'wrong' in the cramming
 scheduler.
-Backspace and delete shortcuts to delete the current card work again
 (reported by Dylan Gordhan).


Mnemosyne 2.2 : 2012-12-04

(Note that for Windows users we recommend uninstalling the previous version
before installing the new one.)

-Added menu option to detect duplicates in the database.